// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/modal/demo/alert.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      自定义按钮 
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      确认对话框
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      弹出多个按钮 
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      按钮 Promise
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/basic.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-wingblank am-wingblank-lg"
  >
    <a
      class="am-button"
      role="button"
    >
      <span>
        Modal 对话框
      </span>
    </a>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/modal/demo/operation.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      操作按钮
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;

exports[`renders ./components/modal/demo/propmt.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      按钮 Promise
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      输入框默认值 
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      输入框密码形式 
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      自定义按钮形式 
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
  <a
    class="am-button"
    role="button"
  >
    <span>
      输入框登录形式 
    </span>
  </a>
  <div
    class="am-whitespace am-whitespace-lg"
  />
</div>
`;
